--- a/examples/week-8/columns.css
+++ b/examples/week-8/columns.css
@@ -1,8 +1,9 @@
 main {
     column-count: 5;
-    /* column-width: 10rem; */
-    /* columns: 20 8em; */
-    /* column-gap: 50px; */
+    /* column-width: 150px;
+    columns: 150px;
+    columns: 20 8em;
+    column-gap: 50px; */
 }
 
 p {
